--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body>
-    <section class="top-side">
-        <div class="top-side-text">
+    <section class="topside">
+        <div class="topside__text">
             <p class="text">Wojtyczka Pracownia Projektowa</p>
 
             <!-- <div class="dark-line"></div> -->
         </div>
 
-        <div class="logo">
-            <img src="./img/logo_wojtyczka_png.png" alt="">
+        <div class="topside__logo">
+            <img src="./img/logo_wojtyczka_png.png" alt="Logo firmy Wojtyczka Pracownia Projektowa">
 
         </div>
 
