add media  on 1200px and hanged html  for sass

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         <div class="topside__text">
             <p class="text">Wojtyczka Pracownia Projektowa</p>
 
-            <!-- <div class="dark-line"></div> -->
+
         </div>
 
         <div class="topside__logo">
             <img src="./img/logo_wojtyczka_png.png" alt="Logo firmy Wojtyczka Pracownia Projektowa">
 
         </div>
-
-        <a href="./portfolio.html"> Przeglądaj Portfolio <div class="blackline"></div> </a>
-
-
+<div class="topside__portfoliosender">
+        <a  href="./portfolio.html"> Przeglądaj Portfolio</a>
+        <div class="blackline"></div>
+    </div>
 
     </section>
 
