--- a/aboutme.html
+++ b/aboutme.html
@@ -22,11 +22,11 @@
         </button>
 
         <div class="nav__items">
-            <a href="" class="nav__item"></a>
-            <a href="" class="nav__item"></a>
-            <a href="" class="nav__item"></a>
-            <a href="" class="nav__item"></a>
-            <a href="" class="nav__item"></a>
+            <a href="#" class="nav__item">Portfolio</a>
+            <a href="#" class="nav__item">O mnie</a>
+            <a href="#" class="nav__item">Publikacje</a>
+            <a href="#" class="nav__item">SKLEP</a>
+            <a href="#" class="nav__item">Kontakt</a>
         </div>
 
         <!-- <a class="nav__logo">
