added navigation js  animation change in index html for about me hreff in tag a

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         </div>
 <div class="topside__portfoliosender">
-        <a  href="./portfolio.html"> Przeglądaj Portfolio</a>
+        <a  href="./aboutme.html"> Przeglądaj Portfolio</a>
         <div class="blackline"></div>
     </div>
 
