about me footer

--- a/index.html
+++ b/index.html
@@ -33,3 +33,14 @@
 </body>
 
 </html>
+
+
+<!-- kolor logo -->
+<!-- HEX #2f5f56
+RGB (47,95,86)
+CMYK (51,0,9,63) -->
+
+<!-- kolor litery logo -->
+<!-- HEX #be9c51
+RGB (190,156,81)
+CMYK (0,18,57,25) -->
