change h1 from p on index html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <section class="topside">
         <div class="topside__text">
-            <p class="text">Wojtyczka Pracownia Projektowa</p>
+            <h1 class="text">Wojtyczka Pracownia Projektowa</h1>
 
 
         </div>
