--- a/aboutme.html
+++ b/aboutme.html
@@ -29,9 +29,9 @@
             <a href="#" class="nav__item">Kontakt</a>
         </div>
 
-        <!-- <a class="nav__logo">
-            <img src="./img/logo_wojtyczka_png.pn" alt="logo firmy Pracownia Projektowa Młgorzata Wojtyczka">
-        </a> -->
+        <a class="nav__logo">
+            <img src="./img/logo_wojtyczka_png.png" alt="logo firmy Pracownia Projektowa Młgorzata Wojtyczka">
+        </a>
         <!-- <div class="div"></div> -->
         <!-- 
         <ul class="nav__list">
@@ -59,9 +59,9 @@
     </nav>
 
     <section class="aboutme-container">
-        
-            <h1>O Mnie </h1>
-       
+
+        <h1>O Mnie </h1>
+
         <div class="aboutme-container__selfpictures ">
 
             <img src="./img/Wojtyczka_self.jpg" alt="zdjęcie właścicielki firmy">
@@ -75,18 +75,18 @@
             </p>
 
             <p> <span>Swoją przygodę</span> z architekturą wnętrz
-                rozpoczęła od wyjazdu z rodzinnego Zakopanego na studia na Akademii Sztuk Pięknych we Wrocławiu.
+                rozpoczęłam od wyjazdu z rodzinnego Zakopanego na studia na Akademii Sztuk Pięknych we Wrocławiu.
                 Po pięciu latach nauki zakończonej obroną dyplomu, praktykach i pracy ze
-                starszymi architektami, założyła własną pracownię i od tego czasu projektuje na własnych warunkach.</p>
-            <P> <span>Uszczęśliwia inwestorów</span> autorskimi, funkcjonalnymi wnętrzami, skrojonymi pod
-                indywidualne potrzeby. Każdy projekt traktuje jak nowe wyzwanie. Nie znosząc
-                anonimowych, bezosobowych wnętrz, podchodzi do swojej pracy w bardzo osobisty,
+                starszymi architektami, założyłam własną pracownię i od tego czasu projektuję na własnych warunkach.</p>
+            <P> <span>Uszczęśliwiam inwestorów</span> autorskimi, funkcjonalnymi wnętrzami, skrojonymi pod
+                indywidualne potrzeby. Każdy projekt traktuję jak nowe wyzwanie. Nie znosząc
+                anonimowych, bezosobowych wnętrz, podchodzę do swojej pracy w bardzo osobisty,
                 ambicjonalny sposób. Kluczowe znaczenie ma tutaj relacja z inwestorem, poznanie jego
-                charakteru, przyzwyczajeń, upodobań. Wierzy, że tylko wtedy projekt będzie kompletny. </P>
-            <p> <span>Najbardziej upodobała sobie</span> Bauhaus i Modernizm, jednak żaden inny styl nie jest jej
+                charakteru, przyzwyczajeń, upodobań. Wierzę, że tylko wtedy projekt będzie kompletny. </P>
+            <p> <span>Najbardziej upodobałam sobie</span> Bauhaus i Modernizm, jednak żaden inny styl nie jest mi
                 straszny.
-                Lubi je ze sobą mieszać, tworząc nieoczywiste, oryginalne projekty. Inspiracje czerpie głównie
-                z podróży i nie boi się przemycać ich do projektów.</p>
+                Lubię je ze sobą mieszać, tworząc nieoczywiste, oryginalne projekty. Inspiracje czerpię głównie
+                z podróży i nie boję się przemycać ich do projektów.</p>
 
 
 
