--- a/aboutme.html
+++ b/aboutme.html
@@ -12,29 +12,30 @@
 </head>
 
 <body>
-    
-    <button class="burger-btn">
-        <div class="burger-btn__box">
-            <div class="burger-btn__bars"></div>
-        </div>
-    </button>
+    <section class="aboutme-desktop">
 
-    <nav class="nav ">
+        <button class="burger-btn">
+            <div class="burger-btn__box">
+                <div class="burger-btn__bars"></div>
+            </div>
+        </button>
+
+        <nav class="nav ">
 
 
-        <div class="nav__items">
-            <a href="#" class="nav__item">Portfolio</a>
-            <a href="./aboutme.html" class="nav__item">O mnie</a>
-            <a href="#" class="nav__item">Publikacje</a>
-            <a href="https://www.maavo.pl/" class="nav__item">SKLEP</a>
-            <a href="#" class="nav__item">Kontakt</a>
-        </div>
+            <div class="nav__items">
+                <a href="#" class="nav__item">Portfolio</a>
+                <a href="./aboutme.html" class="nav__item">O mnie</a>
+                <a href="#" class="nav__item">Publikacje</a>
+                <a href="https://www.maavo.pl/" class="nav__item">SKLEP</a>
+                <a href="#" class="nav__item">Kontakt</a>
+            </div>
 
-        <a class="nav__logo">
-            <img src="./img/logo_wojtyczka_png.png" alt="logo firmy Pracownia Projektowa Młgorzata Wojtyczka">
-        </a>
-        <!-- <div class="div"></div> -->
-        <!-- 
+            <a class="nav__logo">
+                <img src="./img/logo_wojtyczka_png.png" alt="logo firmy Pracownia Projektowa Młgorzata Wojtyczka">
+            </a>
+            <!-- <div class="div"></div> -->
+            <!-- 
         <ul class="nav__list">
             <a href="./aboutme.html">
                 <li>O mnie</li>
@@ -57,66 +58,69 @@
                 <div class="blackline"></div>
             </a>
         </ul> -->
-    </nav>
+        </nav>
 
-    <section class="aboutme-container">
+        <section class="aboutme-container">
 
-        <h1>O Mnie </h1>
+            <h1>O Mnie </h1>
 
-        <div class="aboutme-container__selfpictures ">
+            <div class="aboutme-container__selfpictures ">
 
-            <img src="./img/Wojtyczka_self.jpg" alt="zdjęcie właścicielki firmy">
-        </div>
-        <div class="aboutme-container__description">
-            <h2 class="heading">Wojtyczka Pracownia Projektowa</h2>
-            <br><br>
-            <p class="story">
-                <span>Została założona</span>
-                przez Małgorzatę Wojtyczkę.
-            </p>
+                <img src="./img/Wojtyczka_self.jpg" alt="zdjęcie właścicielki firmy">
+            </div>
+            <div class="aboutme-container__description">
+                <h2 class="heading">Wojtyczka Pracownia Projektowa</h2>
+                <br><br>
+                <div class="story">
+                    <p><span>Została założona</span>
+                    przez Małgorzatę Wojtyczkę.
+                    </p>
 
-            <p> <span>Swoją przygodę</span> z architekturą wnętrz
-                rozpoczęłam od wyjazdu z rodzinnego Zakopanego na studia na Akademii Sztuk Pięknych we Wrocławiu.
-                Po pięciu latach nauki zakończonej obroną dyplomu, praktykach i pracy ze
-                starszymi architektami, założyłam własną pracownię i od tego czasu projektuję na własnych warunkach.</p>
-            <P> <span>Uszczęśliwiam inwestorów</span> autorskimi, funkcjonalnymi wnętrzami, skrojonymi pod
-                indywidualne potrzeby. Każdy projekt traktuję jak nowe wyzwanie. Nie znosząc
-                anonimowych, bezosobowych wnętrz, podchodzę do swojej pracy w bardzo osobisty,
-                ambicjonalny sposób. Kluczowe znaczenie ma tutaj relacja z inwestorem, poznanie jego
-                charakteru, przyzwyczajeń, upodobań. Wierzę, że tylko wtedy projekt będzie kompletny. </P>
-            <p> <span>Najbardziej upodobałam sobie</span> Bauhaus i Modernizm, jednak żaden inny styl nie jest mi
-                straszny.
-                Lubię je ze sobą mieszać, tworząc nieoczywiste, oryginalne projekty. Inspiracje czerpię głównie
-                z podróży i nie boję się przemycać ich do projektów.</p>
-
-
-
-
-        </div>
+                    <p> <span>Swoją przygodę</span> z architekturą wnętrz
+                        rozpoczęłam od wyjazdu z rodzinnego Zakopanego na studia na Akademii Sztuk Pięknych we
+                        Wrocławiu.
+                        Po pięciu latach nauki zakończonej obroną dyplomu, praktykach i pracy ze
+                        starszymi architektami, założyłam własną pracownię i od tego czasu projektuję na własnych
+                        warunkach.</p>
+                    <P> <span>Uszczęśliwiam inwestorów</span> autorskimi, funkcjonalnymi wnętrzami, skrojonymi pod
+                        indywidualne potrzeby. Każdy projekt traktuję jak nowe wyzwanie. Nie znosząc
+                        anonimowych, bezosobowych wnętrz, podchodzę do swojej pracy w bardzo osobisty,
+                        ambicjonalny sposób. Kluczowe znaczenie ma tutaj relacja z inwestorem, poznanie jego
+                        charakteru, przyzwyczajeń, upodobań. Wierzę, że tylko wtedy projekt będzie kompletny. </P>
+                    <p> <span>Najbardziej upodobałam sobie</span> Bauhaus i Modernizm, jednak żaden inny styl nie jest
+                        mi
+                        straszny.
+                        Lubię je ze sobą mieszać, tworząc nieoczywiste, oryginalne projekty. Inspiracje czerpię głównie
+                        z podróży i nie boję się przemycać ich do projektów.</p>
 
 
+                </div>
 
-    </section>
-    <footer class="footer">
-        <div class="footer__copyright">
-            <p> &copy;</p>
-            <p>2023</p>
-        </div>
+            </div>
 
 
-        <div class="footer__social-media">
 
-            <a href="https://www.facebook.com/wojtyczkapracownia"> <img src="./icons/facebook.svg" alt=""></a>
-            <a href="https://www.instagram.com/wojtyczka.pracowniaprojektowa/"> <img src="./icons/instagram.svg"
-                    alt=""></a>
-            <a href="https://pl.pinterest.com/wojtyczka_pracowniaprojektowa/?actingBusinessId=528610212421143013 "> <img
-                    src="./icons/pinterest.svg"
-                    alt="ikonka która prowadzi do strony pinterest Pracownia Projektowa Małgorzata Wojtyczka"></a>
+        </section>
+        <footer class="footer">
+            <div class="footer__copyright">
+                <p> &copy;</p>
+                <p>2023</p>
+            </div>
 
-        </div>
-    </footer>
 
-    <!-- <footer class="footer">
+            <div class="footer__social-media">
+
+                <a href="https://www.facebook.com/wojtyczkapracownia"> <img src="./icons/facebook.svg" alt=""></a>
+                <a href="https://www.instagram.com/wojtyczka.pracowniaprojektowa/"> <img src="./icons/instagram.svg"
+                        alt=""></a>
+                <a href="https://pl.pinterest.com/wojtyczka_pracowniaprojektowa/?actingBusinessId=528610212421143013 ">
+                    <img src="./icons/pinterest.svg"
+                        alt="ikonka która prowadzi do strony pinterest Pracownia Projektowa Małgorzata Wojtyczka"></a>
+
+            </div>
+        </footer>
+
+        <!-- <footer class="footer">
         <div class="footer__copyright">
             <p> &copy;</p>
             <p>2023</p>
@@ -135,6 +139,7 @@
     
     </footer>
      -->
+    </section>
     <script src="./js/main.js"></script>
 </body>
 
