--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
 
 
             <div class="nav__items">
-                <a href="#" class="nav__item">Portfolio</a>
+                <a href="./portfolio.html" class="nav__item">Portfolio</a>
                 <a href="./aboutme.html" class="nav__item">O mnie</a>
                 <a href="#" class="nav__item">Publikacje</a>
                 <a href="https://www.maavo.pl/" class="nav__item">SKLEP</a>
