portfolio added and site with galery in grid technology

--- a/modernclasic.html
+++ b/modernclasic.html
@@ -26,7 +26,7 @@
             <div class="nav__items">
                 <a href="./portfolio.html" class="nav__item">Portfolio</a>
                 <a href="./aboutme.html" class="nav__item">O mnie</a>
-                <a href="./publication.html" class="nav__item">Publikacje</a>
+                <a href="#" class="nav__item">Publikacje</a>
                 <a href="https://www.maavo.pl/" class="nav__item">SKLEP</a>
                 <a href="#" class="nav__item">Kontakt</a>
             </div>
@@ -37,28 +37,29 @@
 
         </nav>
 
-        <section class="peachholiday-container">
-            <h1>peach - holiday</h1>
+        <section class="modernclasic-container">
+            <h1>modernclasic</h1>
 
 
 
-            <div class="peachholiday">
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/1.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/2.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/3.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/4.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/5.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/6.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/7.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/8.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/16.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/10.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/11.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/12.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/13.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/14.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/15.jpg" alt=""></div>
-                <div class="peachholiday__images"><img src="./img/Brzoskwiniowelato/9.jpg" alt=""></div>
+            <div class="modernclasic">
+                <div class="modernclasic__images"><img src="./img/modernclasic/1.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/2.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/3.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/4.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/15.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/6.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/7.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/8.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/9.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/10.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/11.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/12.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/13.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/14.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/5.jpg" alt=""></div>
+                <div class="modernclasic__images"><img src="./img/modernclasic/16.jpg" alt=""></div>
+
             </div>
 
 
