--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                 <div class="portfolio__box">
                     <div class="img1"> <img src="./img/modernclasic/1.jpg" alt=""></div>
                     <div class="img2"><img src="./img/modernclasic/2.jpg" alt=""></div>
-                    <div class="title"><a href="#">Modern Clasic</a></div>
+                    <div class="title"><a href="./modernclasic.html">Modern Clasic</a></div>
                 </div>
 
                 <div class="portfolio__box">
