added galery imfg finish-next step publication and contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                 <div class="portfolio__box">
                     <div class="img1"> <img src="./img/Cieplyminimalizm/1.jpg" alt=""></div>
                     <div class="img2"><img src="./img/Cieplyminimalizm/2.jpg" alt=""></div>
-                    <div class="title"><a href="#">Ciepły Minimalizm</a></div>
+                    <div class="title"><a href="./hotminimalizm.html">Ciepły Minimalizm</a></div>
                 </div>
 
 
@@ -64,12 +64,12 @@
                 <div class="portfolio__box">
                     <div class="img1"> <img src="./img/sadynadzielona/1.jpg" alt=""></div>
                     <div class="img2"><img src="./img/sadynadzielona/2.jpg" alt=""></div>
-                    <div class="title"><a href="#">Sady nad Zieloną</a></div>
+                    <div class="title"><a href="./orchards.html">Sady nad Zieloną</a></div>
                 </div>
                 <div class="portfolio__box">
                     <div class="img1"> <img src="./img/wieczna_wiosna/1.jpg" alt=""></div>
                     <div class="img2"><img src="./img/wieczna_wiosna/2.jpg" alt=""></div>
-                    <div class="title"><a href="#">Wieczna wiosna</a></div>
+                    <div class="title"><a href="./eternalspring.html">Wieczna wiosna</a></div>
                 </div>
             </div>
 
