--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <div class="nav__items">
                 <a href="#" class="nav__item">Portfolio</a>
                 <a href="./aboutme.html" class="nav__item">O mnie</a>
-                <a href="#" class="nav__item">Publikacje</a>
+                <a href="./publication.html" class="nav__item">Publikacje</a>
                 <a href="https://www.maavo.pl/" class="nav__item">SKLEP</a>
                 <a href="#" class="nav__item">Kontakt</a>
             </div>
