added publication mobile

--- a/publication.html
+++ b/publication.html
@@ -24,7 +24,7 @@
 
 
             <div class="nav__items">
-                <a href="#" class="nav__item">Portfolio</a>
+                <a href="./portfolio.html" class="nav__item">Portfolio</a>
                 <a href="./aboutme.html" class="nav__item">O mnie</a>
                 <a href="#" class="nav__item">Publikacje</a>
                 <a href="https://www.maavo.pl/" class="nav__item">SKLEP</a>
@@ -39,14 +39,46 @@
 
         <section class="publication-container">
 
-            <a class="pub1" href="#" class="">link nr 1</a>
-            <a class="pub2" href="#" class="">link nr 2</a>
-            <a class="pub3" href="#" class="">link nr 3</a>
-            <a class="pub4" href="#" class="">link nr 4</a>
-            <a class="pub5" href="#" class="">link nr 5</a>
-            <a class="pub6" href="#" class="">link nr 6</a>
-            <a class="pub7" href="#" class="">link nr 7</a>
-            <a class="pub8" href="#" class="">link nr 8</a>
+            <div class="publication-heading"><h1>Publikacje</h1></div>
+
+
+            <div class="pub1">
+                <a
+                    href="https://www.whitemad.pl/ma-90-m-kw-mieszkanie-na-warszawskiej-pradze/?fbclid=IwAR2-OCED7iV7IY8paGCx7p6tPLe3-fC_gFvNH_4MF_ttDm4IHlPwjlv3Bxw "><span>Magazyn
+                        WHITEMAD:</span> BRZOSKWINIOWE LATO <div class="blackline"></div> </a>
+            </div>
+            <div class="pub2">
+                <a
+                    href="https://www.whitemad.pl/kolorowy-blizniak-we-wroclawiu-tak-urzadzili-swoja-przestrzen/?fbclid=IwAR2zA2JSvkI5ixytJY2tlj6HRes8G2gSPn_sBrg-LRpB5viw29ONOZ-otps w "><span>Magazyn
+                        WHITEMAD:</span> WIECZNA WIOSNA
+                </a>
+            </div>
+
+            <div class="pub3"> <a
+                    href="https://www.santamargherita.net/magazine/en/wojtyczka-design-studio/?fbclid=IwAR3T1Mt0zICWvUjzMdvxOU0CIaIS9hTHQeVMXlsCQT3Av8RNQQDyZ3hiQjs ">santamargherita
+                    - MAGAZINE: BRZOSKWINIOWE LATO</a></div>
+            <div class="pub4"> <a
+                    href="https://label-magazine.com/wnetrza/artykuly/dom-na-obrzezach-wroclawia-w-tym-wnetrzu-caly-rok-panuje-wiosna ">LABEL
+                    - MAGAZINE: wieczna wiosna</a></div>
+            <div class="pub5"> <a
+                    href="https://plndesign.pl/wnetrza-100-metrowego-wroclawskiego-blizniaka-dla-pary-z-dwojka-kotow/?fbclid=IwAR3sUTYI4b440GXT1LTKZU1ZIPgWTXCXj42F-ARNFhRT4GNVGZTbhbyryDs ">plndesign:
+                    BRZOSKWINIOWE LATO</a></div>
+            <div class="pub6"> <a
+                    href="https://label-magazine.com/wnetrza/artykuly/cieply-minimalizm-kawalerka-w-krakowie-z-sypialnia-ukryta-w-szafie ">label
+                    - magazine: Ciepły minimalizm</a></div>
+            <div class="pub7"><a
+                    href="https://www.whitemad.pl/najladniejsze-kawalerki-w-polsce-maja-mniej-niz-35-mkw-wybierz-najlepsza/?fbclid=IwAR3glDqAeYBIX4nTYmInaXydlMtMM4JVMMuV3-EjYLRHoriIW3hrBsxcohY  "><span>Magazyn
+                        WHITEMAD:</span> różne</a></div>
+            <div class="pub8"><a
+                    href="https://plndesign.pl/45-metrowe-mieszkanie-w-inwestycji-bulwary-ksiazece-we-wroclawiu/?fbclid=IwAR2w7S2tG2nasSb9FBumY2w6KycLR-ol0BA-HMjd7ZaoDmMRe_BrOUKSqdk"><span>Magazyn
+                        WHITEMAD:</span> różne</a></div>
+
+            <div class="pub9"><a
+                    href="https://www.elle.pl/decoration/artykul/nowoczesna-klasyka-w-mieszkaniu-nad-odra?fbclid=IwAR3pioe67-RkCe4NlI_bjD1jlRFZXroaYhU7OwMtZnkvYfGfKN6op3r4YgA#mieszkanie-nad-odra-projekt-malgorzata-wojtyczka-pracownia-wojtyczka"><span>Magazyn
+                        WHITEMAD:</span> różne</a></div>
+
+
+
 
         </section>
         <footer class="footer">
