added publication mobile and hreff for other side

--- a/peachholiday.html
+++ b/peachholiday.html
@@ -28,7 +28,7 @@
                 <a href="./aboutme.html" class="nav__item">O mnie</a>
                 <a href="./publication.html" class="nav__item">Publikacje</a>
                 <a href="https://www.maavo.pl/" class="nav__item">SKLEP</a>
-                <a href="#" class="nav__item">Kontakt</a>
+                <a href="./contact.html" class="nav__item">Kontakt</a>
             </div>
 
             <a class="nav__logo">
