--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@
             </a>
 
         </nav>
+    </section>
 
         <section class="portfolio-container">
             <h1>Portfolio</h1>
@@ -55,22 +56,22 @@
                 </div>
 
 
-                <!-- <div class="portfolio__box">
+                <div class="portfolio__box">
                     <div class="img1"> <img src="./img/modernclasic/1.jpg" alt=""></div>
                     <div class="img2"><img src="./img/modernclasic/2.jpg" alt=""></div>
                     <div class="title"><a href="./modernclasic.html">Modern Clasic</a></div>
-                </div> -->
+                </div>
 
-                <!-- <div class="portfolio__box">
+                <div class="portfolio__box">
                     <div class="img1"> <img src="./img/sadynadzielona/1.jpg" alt=""></div>
                     <div class="img2"><img src="./img/sadynadzielona/2.jpg" alt=""></div>
                     <div class="title"><a href="./orchards.html">Sady nad Zieloną</a></div>
-                </div> -->
-                <!-- <div class="portfolio__box">
+                </div>
+                <div class="portfolio__box">
                     <div class="img1"> <img src="./img/wieczna_wiosna/1.jpg" alt=""></div>
                     <div class="img2"><img src="./img/wieczna_wiosna/2.jpg" alt=""></div>
                     <div class="title"><a href="./eternalspring.html">Wieczna wiosna</a></div>
-                </div> -->
+                </div>
             </div>
 
 
@@ -117,7 +118,7 @@
 
             </div>
         </footer>
-    </section>
+  
     <script src="./js/main.js"></script>
 </body>
 
