--- a/portfolio.html
+++ b/portfolio.html
@@ -47,33 +47,23 @@
                     <div class="img2"><img src="./img/Brzoskwiniowelato/2.jpg" alt=""></div>
                     <div class="title"><a href="peachholiday.html">brzoskiwniowe Lato</a></div>
                 </div>
-                
-
-
+            </div>
+            <div class="portfolio">
                 <div class="portfolio__box">
-                    <div class="img1"> <img src="./img/Cieplyminimalizm/1.jpg" alt=""></div>
-                    <div class="img2"><img src="./img/Cieplyminimalizm/2.jpg" alt=""></div>
-                    <div class="title"><a href="./hotminimalizm.html">Ciepły Minimalizm</a></div>
-                </div>
-
-
-                <div class="portfolio__box">
-                    <div class="img1"> <img src="./img/modernclasic/1.jpg" alt=""></div>
-                    <div class="img2"><img src="./img/modernclasic/2.jpg" alt=""></div>
-                    <div class="title"><a href="./modernclasic.html">Modern Clasic</a></div>
-                </div>
-
-                <div class="portfolio__box">
-                    <div class="img1"> <img src="./img/sadynadzielona/1.jpg" alt=""></div>
-                    <div class="img2"><img src="./img/sadynadzielona/2.jpg" alt=""></div>
-                    <div class="title"><a href="./orchards.html">Sady nad Zieloną</a></div>
-                </div>
-                <div class="portfolio__box">
-                    <div class="img1"> <img src="./img/wieczna_wiosna/1.jpg" alt=""></div>
-                    <div class="img2"><img src="./img/wieczna_wiosna/2.jpg" alt=""></div>
-                    <div class="title"><a href="./eternalspring.html">Wieczna wiosna</a></div>
+                    <div class="img1"> <img src="./img/Brzoskwiniowelato/1.jpg" alt=""></div>
+                    <div class="img2"><img src="./img/Brzoskwiniowelato/2.jpg" alt=""></div>
+                    <div class="title"><a href="peachholiday.html">brzoskiwniowe Lato</a></div>
                 </div>
             </div>
+            <div class="portfolio">
+                <div class="portfolio__box">
+                    <div class="img1"> <img src="./img/Brzoskwiniowelato/1.jpg" alt=""></div>
+                    <div class="img2"><img src="./img/Brzoskwiniowelato/2.jpg" alt=""></div>
+                    <div class="title"><a href="peachholiday.html">brzoskiwniowe Lato</a></div>
+                </div>
+            </div>
+                
+
 
 
 
