--- a/portfolio.html
+++ b/portfolio.html
@@ -48,14 +48,14 @@
                     <div class="title"><a href="peachholiday.html">brzoskiwniowe Lato</a></div>
                 </div>
             </div>
-            <div class="portfolio">
+            <div class="portfolio1">
                 <div class="portfolio__box">
-                    <div class="img1"> <img src="./img/Brzoskwiniowelato/1.jpg" alt=""></div>
-                    <div class="img2"><img src="./img/Brzoskwiniowelato/2.jpg" alt=""></div>
-                    <div class="title"><a href="peachholiday.html">brzoskiwniowe Lato</a></div>
+                    <div class="img1"> <img src="./img/modernclasic/2.jpg" alt=""></div>
+                    <div class="img2"><img src="./img/modernclasic/1.jpg" alt=""></div>
+                    <div class="title"><a href="peachholiday.html">Modern Clasic</a></div>
                 </div>
             </div>
-            <div class="portfolio">
+            <div class="portfolio2">
                 <div class="portfolio__box">
                     <div class="img1"> <img src="./img/Brzoskwiniowelato/1.jpg" alt=""></div>
                     <div class="img2"><img src="./img/Brzoskwiniowelato/2.jpg" alt=""></div>
