--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                     <div class="img2"><img src="./img/Brzoskwiniowelato/2.jpg" alt=""></div>
                     <div class="title"><a href="peachholiday.html">brzoskiwniowe Lato</a></div>
                 </div>
-            </div>
+            </div>`
                 
 
 
